Added Validation API

--- a/eQueue/eQueue-ejb/nbproject/project.properties
+++ b/eQueue/eQueue-ejb/nbproject/project.properties
@@ -36,7 +36,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=eQueue-ejb.jar
 javac.classpath=\
-    ${libs.javaee-api-7.0.classpath}
+    ${libs.javaee-api-7.0.classpath}:\
+    ${libs.validation-api-2.0.1.Final.classpath}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
