--- a/eQueue/eQueue-war/web/WEB-INF/web.xml
+++ b/eQueue/eQueue-war/web/WEB-INF/web.xml
@@ -4,6 +4,10 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Production</param-value>
     </context-param>
+    <context-param>
+        <param-name>primefaces.FONT_AWESOME</param-name>
+        <param-value>true</param-value>
+    </context-param>
     <listener>
         <description>ServletContextListener, HttpSessionListener</description>
         <listener-class>web.listener.WebApplicationListener</listener-class>
