--- a/eQueue/eQueue-war/web/WEB-INF/web.xml
+++ b/eQueue/eQueue-war/web/WEB-INF/web.xml
@@ -8,6 +8,12 @@
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
     </context-param>
+    <context-param>  
+        <param-name>  
+            javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL  
+        </param-name>  
+        <param-value>true</param-value>  
+    </context-param>  
     <listener>
         <description>ServletContextListener, HttpSessionListener</description>
         <listener-class>web.listener.WebApplicationListener</listener-class>
