employee accounts can be created along with profile picture now

--- a/eQueue/eQueue-war/web/WEB-INF/web.xml
+++ b/eQueue/eQueue-war/web/WEB-INF/web.xml
@@ -8,10 +8,16 @@
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
     </context-param>
+    <context-param>
+        <param-name>primefaces.UPLOADER</param-name>
+        <param-value>native</param-value>
+    </context-param>
+<!--    <context-param>
+        <param-name>alternatedocroot_1</param-name>
+        <param-value>C:/Personal_Information/NUS/AY1920S2/IS3106/Project/eQueue/eQueue/eQueue-war/web/resources/images/profiles</param-value>
+    </context-param>-->
     <context-param>  
-        <param-name>  
-            javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL  
-        </param-name>  
+        <param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>  
         <param-value>true</param-value>  
     </context-param>  
     <listener>
