Added code generation codes

--- a/eQueue/eQueue-ejb/nbproject/project.properties
+++ b/eQueue/eQueue-ejb/nbproject/project.properties
@@ -38,7 +38,8 @@ jar.name=eQueue-ejb.jar
 jars.in.ejbjar=false
 javac.classpath=\
     ${libs.javaee-api-7.0.classpath}:\
-    ${libs.Bean_Validation_API_2.0.1.classpath}
+    ${libs.Bean_Validation_API_2.0.1.classpath}:\
+    ${libs.Zxing.classpath}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
