--- a/eQueue/eQueue-war/nbproject/project.properties
+++ b/eQueue/eQueue-war/nbproject/project.properties
@@ -46,7 +46,8 @@ javac.classpath=\
     ${reference.eQueue-ejb.dist}:\
     ${libs.jsf20.classpath}:\
     ${libs.javaee-web-api-7.0.classpath}:\
-    ${libs.PrimeFaces_7.0.classpath}
+    ${libs.PrimeFaces_7.0.classpath}:\
+    ${libs.Zxing.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
