--- a/eQueue/eQueue-ejb/nbproject/project.properties
+++ b/eQueue/eQueue-ejb/nbproject/project.properties
@@ -38,8 +38,7 @@ jar.name=eQueue-ejb.jar
 jars.in.ejbjar=false
 javac.classpath=\
     ${libs.javaee-api-7.0.classpath}:\
-    ${libs.Bean_Validation_API_2.0.1.classpath}:\
-    ${libs.Zxing.classpath}
+    ${libs.Bean_Validation_API_2.0.1.classpath}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
