--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ hs_err_pid*
 /JavaApplication5/nbproject/private/
 /HolidayReservationSystemClient/nbproject/private/
 /PointOfSaleSystemV43SeClient/nbproject/private/
+/eQueue/eQueueRws/nbproject/private/
