--- a/eQueue/eQueueRws/nbproject/project.properties
+++ b/eQueue/eQueueRws/nbproject/project.properties
@@ -76,6 +76,7 @@ platform.active=default_platform
 project.eQueue-ejb=../eQueue-ejb
 reference.eQueue-ejb.dist=${project.eQueue-ejb}/dist/eQueue-ejb.jar
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
