--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ hs_err_pid*
 /HolidayReservationSystemClient/nbproject/private/
 /PointOfSaleSystemV43SeClient/nbproject/private/
 /eQueue/eQueueRws/nbproject/private/
+/EonicQueue/nbproject/private/
