Revert "Qr client side"

--- a/eQueue/eQueue-war/nbproject/project.properties
+++ b/eQueue/eQueue-war/nbproject/project.properties
@@ -47,7 +47,7 @@ javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.javaee-web-api-7.0.classpath}:\
     ${libs.PrimeFaces_7.0.classpath}:\
-    ${libs.PrimeQrCode.classpath}
+    ${libs.Zxing.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
