Revert "Created Restful Project"

--- a/eQueue/nbproject/project.properties
+++ b/eQueue/nbproject/project.properties
@@ -24,8 +24,7 @@ jar.compress=false
 jar.content.additional=\
     ${reference.eQueue-war.dist-ear}:\
     ${reference.eQueue-ejb.dist-ear}:\
-    jar.name=eQueue.ear:\
-    ${reference.eQueueRws.dist-ear}
+jar.name=eQueue.ear
 javac.debug=true
 javac.deprecation=false
 javac.source=1.8
@@ -35,9 +34,7 @@ no.dependencies=false
 platform.active=default_platform
 project.eQueue-ejb=eQueue-ejb
 project.eQueue-war=eQueue-war
-project.eQueueRws=eQueueRws
 reference.eQueue-ejb.dist-ear=${project.eQueue-ejb}/dist/eQueue-ejb.jar
 reference.eQueue-war.dist-ear=${project.eQueue-war}/dist/eQueue-war.war
-reference.eQueueRws.dist-ear=${project.eQueueRws}/dist/eQueueRws.war
 resource.dir=setup
 source.root=.
