--- a/eQueue/eQueue-rws/web/WEB-INF/web.xml
+++ b/eQueue/eQueue-rws/web/WEB-INF/web.xml
@@ -21,4 +21,10 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <ejb-local-ref>
+        <ejb-ref-name>ShoppingCartSessionBean</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <local>ejb.session.stateless.ShoppingCartSessionBeanLocal</local>
+        <ejb-link>eQueue-ejb.jar#ShoppingCartSessionBean</ejb-link>
+    </ejb-local-ref>
 </web-app>
