--- a/eQueue/eQueue-rws/web/WEB-INF/web.xml
+++ b/eQueue/eQueue-rws/web/WEB-INF/web.xml
@@ -27,4 +27,10 @@
         <local>ejb.session.stateless.ShoppingCartSessionBeanLocal</local>
         <ejb-link>eQueue-ejb.jar#ShoppingCartSessionBean</ejb-link>
     </ejb-local-ref>
+    <ejb-local-ref>
+        <ejb-ref-name>CreditCardSessionBean</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <local>ejb.session.stateless.CreditCardSessionBeanLocal</local>
+        <ejb-link>eQueue-ejb.jar#CreditCardSessionBean</ejb-link>
+    </ejb-local-ref>
 </web-app>
