--- a/eQueue/eQueue-war/nbproject/project.properties
+++ b/eQueue/eQueue-war/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.blitzer-1.0.10.jar=C:\\Users\\User\\Desktop\\Year2Sem2\\IS3106\\Week 06\\Week 06\\primefaces-blitzer-1.0.10\\primefaces-blitzer-1.0.10\\blitzer-1.0.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +47,8 @@ javac.classpath=\
     ${reference.eQueue-ejb.dist}:\
     ${libs.javaee-web-api-7.0.classpath}:\
     ${libs.PrimeFaces_7.0.classpath}:\
-    ${libs.PrimeQrCode.classpath}
+    ${libs.PrimeQrCode.classpath}:\
+    ${file.reference.blitzer-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
