--- a/eQueue/eQueue-rws/web/WEB-INF/web.xml
+++ b/eQueue/eQueue-rws/web/WEB-INF/web.xml
@@ -39,4 +39,16 @@
         <local>ejb.session.stateless.CustomerOrderSessionBeanLocal</local>
         <ejb-link>eQueue-ejb.jar#CustomerOrderSessionBean</ejb-link>
     </ejb-local-ref>
+    <ejb-local-ref>
+        <ejb-ref-name>PaymentTransactionSessionBeanLocal</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <local>ejb.session.stateless.PaymentTransactionSessionBeanLocal</local>
+        <ejb-link>eQueue-ejb.jar#PaymentTransactionSessionBean</ejb-link>
+    </ejb-local-ref>
+    <ejb-local-ref>
+        <ejb-ref-name>PaymentTransactionSessionBeanLocal1</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <local>ejb.session.stateless.PaymentTransactionSessionBeanLocal</local>
+        <ejb-link>eQueue-ejb.jar#PaymentTransactionSessionBean</ejb-link>
+    </ejb-local-ref>
 </web-app>
