--- a/eQueue/eQueue-war/nbproject/project.properties
+++ b/eQueue/eQueue-war/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.blitzer-1.0.10.jar=C:\\Users\\User\\Desktop\\Year2Sem2\\IS3106\\Week 06\\Week 06\\primefaces-blitzer-1.0.10\\primefaces-blitzer-1.0.10\\blitzer-1.0.10.jar
+file.reference.blitzer-1.0.10.jar=C:\\Personal_Information\\NUS\\AY1920S2\\IS3106\\Libraries\\blitzer-1.0.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
