--- a/eQueue/eQueue-war/nbproject/project.properties
+++ b/eQueue/eQueue-war/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.blitzer-1.0.10.jar-1=D:\\Google Drive\\Study Materials\\IS3106\\Files\\blitzer-1.0.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,7 +47,7 @@ javac.classpath=\
     ${libs.javaee-web-api-7.0.classpath}:\
     ${libs.PrimeFaces_7.0.classpath}:\
     ${libs.PrimeQrCode.classpath}:\
-    ${file.reference.blitzer-1.0.10.jar-1}
+    ${libs.Blitzer.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
