--- a/eQueue/eQueue-war/web/WEB-INF/web.xml
+++ b/eQueue/eQueue-war/web/WEB-INF/web.xml
@@ -49,9 +49,9 @@
         <param-name>primefaces.THEME</param-name>
         <param-value>nova-light</param-value>
     </context-param>
-<!--    <context-param>
-        <param-name>primefaces.THEME</param-name>
-        <param-value>blitzer</param-value>
-    </context-param>-->
+    <context-param>
+        <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+        <param-value>true</param-value>
+    </context-param>
 
 </web-app>
